--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				    
 					<p></p>
 					<ul class="actions">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
+						<li><a href="#two" class="button scrolly">Let's get Started</a></li>
 					</ul>
 				</div>
 			</section>
@@ -37,10 +37,10 @@
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
+								<h2 class="firstRow">Lorem ipsum dolor adipiscing<br />
 								amet dolor consequat</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<p class="firstRow">Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
