seeing what the best color

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Photon by HTML5 UP</title>
+		<title>Faizon's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -23,8 +23,7 @@
 				<div class="inner">
                     <h1><a href="http://html5up.net"><span class="glyphicon glyphicon-fire"></span></a></h1>
 					<h1>Hello, and Welcome to <strong>Faizon's Portfolio</strong><br /></h1>
-				    
-					<p></p>
+
 					<ul class="actions">
 						<li><a href="#two" class="button scrolly">Let's get Started</a></li>
 					</ul>
@@ -40,7 +39,9 @@
 								<h2 class="colorBlue">Hard Work & Dedication<br />
 								goes a long way</h2>
 							</header>
-							<p class="colorBlue">Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<h4 class="colorBlue">I'm a hard working man striving to become a better person everyday.<br />
+                            "Inhaling Information and Exhaling Results" is my Motto<br />
+                            because I know the more I learn the more I can accomplish</h4>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
@@ -85,27 +86,27 @@
 					<p class="colorBlue">Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/BankAccount.PNG" /></span>
+                            <a href="https://github.com/FaizeChan/BankAccount2"><span class="image fit"><img src="images/BankAccount.PNG" /></span></a>
 							<h3 class="colorBlue">Magna feugiat lorem</h3>
 							<p class="colorBlue">Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/FaizeChan/BankAccount2" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/TuscanyVilla.PNG" /></span>
+                            <a href="https://github.com/FaizeChan/TuscanyVilla"><span class="image fit"><img src="images/TuscanyVilla.PNG" /></span></a>
 							<h3 class="colorBlue">Magna feugiat lorem</h3>
 							<p class="colorBlue">Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/FaizeChan/TuscanyVilla" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="4u$ 12u$(medium)">
-							<span class="image fit"><img src="images/MVCLocation.PNG" /> </span>
+							<a href="https://github.com/FaizeChan/MVCProject2"><span class="image fit"><img src="images/MVCLocation.PNG" /> </span></a>
 							<h3 class="colorBlue">Magna feugiat lorem</h3>
 							<p class="colorBlue">Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/FaizeChan/MVCProject2" class="button">More</a></li>
 							</ul>
 						</div>
 					</div>
@@ -130,14 +131,12 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+                    <li><a href="https://github.com/FaizeChan" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="https://www.facebook.com/ObeyFaize" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://github.com/FaizeChan" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://mail.google.com/mail/u/0/#inbox?compose=15fb2b1bb01b46f8" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+                    <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=obey.faize@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li class="footerColor">&copy; Untitled</li><li class="footerColor">Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
