added a linked in to my footer

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 								goes a long way</h2>
 							</header>
 							<h4 class="colorBlue">I'm a hard working man striving to become a better person everyday.<br />
-                            "Inhaling Information and Exhaling Results" is my Motto<br />
-                            because I know the more I learn the more I can accomplish</h4>
+                                <strong class="colorBlue">"Inhaling Information and Exhaling Results"</strong> is my Motto<br />
+                            because I know the more I learn the more I can achieve</h4>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
@@ -134,6 +134,7 @@
                     <li><a href="https://github.com/FaizeChan" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="https://www.facebook.com/ObeyFaize" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
                     <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=obey.faize@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/faizon-alexander/" class="icon alt fa-linkedin"<span class="label"></span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li class="footerColor">&copy; Untitled</li><li class="footerColor">Design: <a href="http://html5up.net">HTML5 UP</a></li>
