--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 		<title>Faizon's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
         <link href="assets/mycss/Style.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	</head>
@@ -25,7 +22,7 @@
 					<h1>Hello, and Welcome to <strong>Faizon's Portfolio</strong><br /></h1>
 
 					<ul class="actions">
-						<li><a href="#two" class="button scrolly">Let's get Started</a></li>
+						<li><a href="#one" class="button scrolly">Let's get Started</a></li>
 					</ul>
 				</div>
 			</section>
@@ -56,8 +53,8 @@
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
 							<ul class="major-icons">
-								<li><span class="icon style1 major fa-code"></span></li>
-								<li><span class="icon style2 major fa-bolt"></span></li>
+								<li><span class="icon style1 major fa-linkedin"></span></li>
+								<li><span class="icon style2 major fa-github"></span></li>
 								<li><span class="icon style3 major fa-camera-retro"></span></li>
 								<li><span class="icon style4 major fa-cog"></span></li>
 								<li><span class="icon style5 major fa-desktop"></span></li>
@@ -66,10 +63,9 @@
 						</div>
 						<div class="6u$ 12u$(medium)">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>More About Me</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
+							<p>I graduated highschool back in 2015 not know the career path I wanted to take, but I did know that i had a goal in mind and that was to own my own business one day and become financially free without having to worry about wheather or not my next paycheck will get me through the week or not.</p>
 							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
 							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
 						</div>
@@ -87,7 +83,7 @@
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
                             <a href="https://github.com/FaizeChan/BankAccount2"><span class="image fit"><img src="images/BankAccount.PNG" /></span></a>
-							<h3 class="colorBlue">Magna feugiat lorem</h3>
+							<h3 class="colorBlue">Bank Account</h3>
 							<p class="colorBlue">Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions">
 								<li><a href="https://github.com/FaizeChan/BankAccount2" class="button">More</a></li>
@@ -95,7 +91,7 @@
 						</div>
 						<div class="4u 12u$(medium)">
                             <a href="https://github.com/FaizeChan/TuscanyVilla"><span class="image fit"><img src="images/TuscanyVilla.PNG" /></span></a>
-							<h3 class="colorBlue">Magna feugiat lorem</h3>
+							<h3 class="colorBlue">Tuscany Villa</h3>
 							<p class="colorBlue">Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions">
 								<li><a href="https://github.com/FaizeChan/TuscanyVilla" class="button">More</a></li>
@@ -103,7 +99,7 @@
 						</div>
 						<div class="4u$ 12u$(medium)">
 							<a href="https://github.com/FaizeChan/MVCProject2"><span class="image fit"><img src="images/MVCLocation.PNG" /> </span></a>
-							<h3 class="colorBlue">Magna feugiat lorem</h3>
+							<h3 class="colorBlue">MVC Project Location</h3>
 							<p class="colorBlue">Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions">
 								<li><a href="https://github.com/FaizeChan/MVCProject2" class="button">More</a></li>
@@ -117,12 +113,12 @@
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>Ipsum feugiat consequat?</h2>
+						<h2>Want to see more Projects?</h2>
 					</header>
-					<p>Sed lacus nascetur ac ante amet sapien.</p>
+					<h4>click the left button below to see what I'm up to</h4>
 					<ul class="actions uniform">
-						<li><a href="#" class="button special">Sign Up</a></li>
-						<li><a href="#" class="button">Learn More</a></li>
+						<li><a href="https://github.com/FaizeChan" class="button special">Projects</a></li>
+						<li><a href="#one" class="button special">Back to the top</a></li>
 					</ul>
 				</div>
 			</section>
@@ -134,7 +130,7 @@
                     <li><a href="https://github.com/FaizeChan" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="https://www.facebook.com/ObeyFaize" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
                     <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=obey.faize@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-                    <li><a href="https://www.linkedin.com/in/faizon-alexander/" class="icon alt fa-linkedin"<span class="label"></span></a></li>
+                    <li><a href="https://www.linkedin.com/in/faizon-alexander/" class="icon alt fa-linkedin"><span class="label"></span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li class="footerColor">&copy; Untitled</li><li class="footerColor">Design: <a href="http://html5up.net">HTML5 UP</a></li>
