--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
         <link href="assets/mycss/Style.css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Eagle+Lake|Merriweather|Sofia" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	</head>
 	<body>
@@ -19,7 +20,7 @@
 			<section id="header">
 				<div class="inner">
                     <h1><a href="http://html5up.net"><span class="glyphicon glyphicon-fire"></span></a></h1>
-					<h1>Hello, and Welcome to <strong>Faizon's Portfolio</strong><br /></h1>
+					<h1>Welcome to <strong>Faizon's Portfolio</strong><br /></h1>
 
 					<ul class="actions">
 						<li><a href="#one" class="button scrolly">Let's get Started</a></li>
@@ -33,15 +34,17 @@
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
 							<header class="major">
-								<h2 class="colorBlue">Hard Work & Dedication<br />
+								<h2 class="colorBlue2">Hard Work & Dedication<br />
 								goes a long way</h2>
 							</header>
-							<h4 class="colorBlue">I'm a hard working man striving to become a better person everyday.<br />
-                                <strong class="colorBlue">"Inhaling Information and Exhaling Results"</strong> is my Motto<br />
+							<h4 class="colorBlue2">A hard working young man striving to become a better person.<br />
+                                <strong class="colorBlue2">"Inhaling Information and Exhaling Results"</strong><br /> is my Motto<br />
                             because I know the more I learn the more I can achieve</h4>
+                            <h4 class="colorBlue2"> Let's Reach new heights together!</h4>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+                            <span class="image fit">
+                                <img src="images/hotairballoons.jpg" /></span>
 						</div>
 					</div>
 				</div>
@@ -56,18 +59,18 @@
 								<li><span class="icon style1 major fa-linkedin"></span></li>
 								<li><span class="icon style2 major fa-github"></span></li>
 								<li><span class="icon style3 major fa-camera-retro"></span></li>
-								<li><span class="icon style4 major fa-cog"></span></li>
+								<li><span class="icon style4 major fa-plane"></span></li>
 								<li><span class="icon style5 major fa-desktop"></span></li>
 								<li><span class="icon style6 major fa-calendar"></span></li>
 							</ul>
 						</div>
 						<div class="6u$ 12u$(medium)">
 							<header class="major">
-								<h2>More About Me</h2>
+								<h2 class="justFont">About Me</h2>
 							</header>
-							<p>I graduated highschool back in 2015 not know the career path I wanted to take, but I did know that i had a goal in mind and that was to own my own business one day and become financially free without having to worry about wheather or not my next paycheck will get me through the week or not.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
+							<p>I graduated highschool back in 2015 not knowing the career path I wanted to take, but I did know that I had a goal in mind and that was to own my own business one day and become financially free so I can travel the world without having to worry about the cost.</p>
+							<p>When highschool was over and done with I didn't know exactly where to begin my journey, so I decided that I needed a little bit of help and asked my family. They then asked me what do I like doing on my time and I told them I'm usually on the computer because hey everybody is on the computer now a days, but they know that I like spending most of my time on the computer so they refered me to a bootcamp for coders and interested enough I decided to take the next step and dive into WCCI. Next thing I knew I was learning things that I never thought I would be learning and I was actually excited to learn more.</p>
+							<p>I know that my goal is going to be a huge uphill obstacle but I also know if I won't help myself then nobody will, so I'll have to grind and work my way up to the top until I reach my goal. I met a lot of people along the way that helped me get through some of the tough times, and I am truly greatful for everything they have done for me. </p>
 						</div>
 					</div>
 				</div>
@@ -77,14 +80,14 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2 class="colorBlue">Adipiscing amet consequat</h2>
+						<h2 class="colorBlue">Some Projects I've Done</h2>
 					</header>
-					<p class="colorBlue">Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
+					<p class="colorBlue">Here's some finished projects I've done. Knowing the stuff I've learned now though, I know know what I would do differently if I could do them over. </p>
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
                             <a href="https://github.com/FaizeChan/BankAccount2"><span class="image fit"><img src="images/BankAccount.PNG" /></span></a>
 							<h3 class="colorBlue">Bank Account</h3>
-							<p class="colorBlue">Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<p class="colorBlue">Having the computer calculate the total amount of money inside of the Bank Account and store the information was a task, but It was fun while figuring it out in the process. </p>
 							<ul class="actions">
 								<li><a href="https://github.com/FaizeChan/BankAccount2" class="button">More</a></li>
 							</ul>
@@ -92,7 +95,7 @@
 						<div class="4u 12u$(medium)">
                             <a href="https://github.com/FaizeChan/TuscanyVilla"><span class="image fit"><img src="images/TuscanyVilla.PNG" /></span></a>
 							<h3 class="colorBlue">Tuscany Villa</h3>
-							<p class="colorBlue">Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<p class="colorBlue">This project was real tedious but intriguing at the same time. When I finally got something to work the way I wanted it to I was so happy and yet relieved but I knew there was more I had to do so I kept on working.</p>
 							<ul class="actions">
 								<li><a href="https://github.com/FaizeChan/TuscanyVilla" class="button">More</a></li>
 							</ul>
@@ -100,7 +103,7 @@
 						<div class="4u$ 12u$(medium)">
 							<a href="https://github.com/FaizeChan/MVCProject2"><span class="image fit"><img src="images/MVCLocation.PNG" /> </span></a>
 							<h3 class="colorBlue">MVC Project Location</h3>
-							<p class="colorBlue">Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<p class="colorBlue">This project was more on the relaxing side because I didn't really need to do that much to it but with the information I know now, I know what I couldve done differently to make this project much better so it can really pop!</p>
 							<ul class="actions">
 								<li><a href="https://github.com/FaizeChan/MVCProject2" class="button">More</a></li>
 							</ul>
@@ -113,9 +116,9 @@
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>Want to see more Projects?</h2>
+						<h2 class="justFont">Want to see more Projects?</h2>
 					</header>
-					<h4>click the left button below to see what I'm up to</h4>
+					<h4 class="justFont">click the left button below to see what I'm up to</h4>
 					<ul class="actions uniform">
 						<li><a href="https://github.com/FaizeChan" class="button special">Projects</a></li>
 						<li><a href="#one" class="button special">Back to the top</a></li>
@@ -132,6 +135,7 @@
                     <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=obey.faize@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
                     <li><a href="https://www.linkedin.com/in/faizon-alexander/" class="icon alt fa-linkedin"><span class="label"></span></a></li>
 				</ul>
+                <h5>Obey.faize@gmail.com</h5>
 				<ul class="copyright">
 					<li class="footerColor">&copy; Untitled</li><li class="footerColor">Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
