--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 							<p>I graduated highschool back in 2015 not knowing the career path I wanted to take, but I did know that I had a goal in mind and that was to own my own business one day and become financially free so I can travel the world without having to worry about the cost.</p>
 							<p>When highschool was over and done with I didn't know exactly where to begin my journey, so I decided that I needed a little bit of help and asked my family. They then asked me what do I like doing on my time and I told them I'm usually on the computer because hey everybody is on the computer now a days, but they know that I like spending most of my time on the computer so they refered me to a bootcamp for coders and interested enough I decided to take the next step and dive into WCCI. Next thing I knew I was learning things that I never thought I would be learning and I was actually excited to learn more.</p>
 							<p>I know that my goal is going to be a huge uphill obstacle but I also know if I won't help myself then nobody will, so I'll have to grind and work my way up to the top until I reach my goal. I met a lot of people along the way that helped me get through some of the tough times, and I am truly greatful for everything they have done for me. </p>
+                            <p>I learned different types of coding languages along the way such as | C# | JavaScript | JQuery | MVC | HTML | CSS | OOP | SQL and I'm prepared for more to come.</p>
 						</div>
 					</div>
 				</div>
